--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-com.github.eugeneia.recall (0.8elementary1) UNRELEASED; urgency=low
+com.github.eugeneia.recall (0.8.1) UNRELEASED; urgency=low
 
   [ Max Rottenkolber ]
   * Initial Release.
   * Lots of things
 
- -- Max Rottenkolber <max@mr.gy>  Sat, 10 Aug 2019 02:26:43 +0200
+ -- Max Rottenkolber <max@mr.gy>  Sun, 11 Aug 2019 00:59:38 +0200
