--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
-com.github.eugeneia.recall (0.8.1) UNRELEASED; urgency=low
+com.github.eugeneia.recall (0.8.2) UNRELEASED; urgency=low
 
   [ Max Rottenkolber ]
   * Initial Release.
   * Lots of things
+  * Fix search command building weirdness
 
- -- Max Rottenkolber <max@mr.gy>  Sun, 11 Aug 2019 00:59:38 +0200
+ -- Max Rottenkolber <max@mr.gy>  Sun, 11 Aug 2019 20:35:31 +0200
